buildscript {
    ext {
        kotlin_version = '1.5.21'
    }
    repositories {
        google()
        mavenCentral()
    }
    dependencies {
        classpath "com.android.tools.build:gradle:7.0.0"
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"

        // NOTE: Do not place your application dependencies here; they belong
        // in the individual module build.gradle files
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    compileSdkVersion 31
    defaultConfig {
        minSdkVersion 18
        targetSdkVersion 31
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        buildTypes {
            debug {
                debuggable true
                jniDebuggable true
                ndk {
                    abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
                    debuggable true
                }
                externalNativeBuild {
                    cmake {
                        cppFlags "-g",              // enable debug info
                            "-DDEBUG=1",            // Debug flags
                            "-DCMAKE_BUILD_TYPE=Debug",
                            "-O0",
                            //"-O1",                  // Minimal optimize. (-Wuninitialized requires -O1)
                                                    // Change to -O0 if you're having trouble debugging
                            "-Wall", "-Wextra",     // warnings

                            "-Wuninitialized",      // requires -O1 or above, but doesn't seem to work anyway
                            "-Wmissing-field-initializers",
                            "-Woverloaded-virtual",

                            "-Wno-unused-parameter",
                            "-Wno-unused-private-field",
                            "-Wno-reorder",
                            "-Wno-sign-compare",
                            "-Wno-missing-braces",
                            "-Wno-null-pointer-arithmetic"
                        version '3.18.1'
                    }
                }
            }
            release {
                debuggable false
                jniDebuggable false
                ndk {
                    abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
                    debuggable false
                }
                externalNativeBuild {
                    cmake {
                        cppFlags "-O2", "-DNDEBUG=1", "-DCMAKE_BUILD_TYPE=Release"
                        version '3.18.1'
                    }
                }
            }
        }

        externalNativeBuild {
            cmake {
                cppFlags "-frtti", "-fexceptions", "-std=gnu++14"
                version '3.18.1'
            }
        }

    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            jniDebuggable true
        }
    }
    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
            version '3.18.1'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_1_8
    }
    testOptions {
        reportDir "build/outputs/reports"
        resultsDir "build/outputs/results"
        unitTests {
            all {
                //jvmArgs '-XX:MaxPermSize=256m'
                //if (it.name == 'testDebugUnitTest') {
                //    systemProperty 'debug', 'true'
                //}
            }
        }
    }
    ndkVersion '22.1.7171670'
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.3.1'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.4.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation 'androidx.core:core-ktx:1.6.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    api 'com.google.android.gms:play-services-location:18.0.0'

    //noinspection GradleDependency
    implementation 'com.squareup.okhttp3:okhttp:3.12.13'
}
